--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: home
 ---
 
-<div class="index-content blog">
+
+<h1>Hello guys</h1>>
+<!-- <div class="index-content blog">
     <div class="section">
         <div class="cate-bar">
           <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i><span> Profile</span></a>
@@ -35,4 +37,4 @@ layout: home
       </div> 
 
     </div>
-</div>
+</div> -->
